--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,27 @@
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: #333;
-    overflow: hidden;
-}
+ body,
+ h1,
+ h2,
+ h3,
+ h4,
+ h5,
+ h6 {
+     font-family: "Raleway", sans-serif
+ }
 
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
+ body,
+ html {
+     height: 100%;
+     line-height: 1.8;
+ }
 
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
+ /* Full height image header */
+ .bgimg-1 {
+     background-position: center;
+     background-size: cover;
+     background-image: url("/assets/images/background-image.jpg");
+     min-height: 100%;
+ }
 
-/* Add a color to the active/current link */
-.topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-}
+ .w3-bar .w3-button {
+     padding: 16px;
+ }
